fix: Wrong overflow of master schema hierarchy node creation popup.

--- a/src/components/TreeHierarchy/styles.scss
+++ b/src/components/TreeHierarchy/styles.scss
@@ -85,9 +85,12 @@
   }
 
   &__name {
+    max-width: 100%;
+  }
+
+  &__name-text {
     font-size: 1.125rem;
 
-    max-width: 100%;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
@@ -141,10 +144,10 @@
     font-size: 0.75rem;
     line-height: 1.3;
 
-    z-index: 1;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.160784);
 
     position: relative;
+
     &:after {
       content: "";
       width: 80%;
